--- a/wnv-s_weekly_report_pipeline.qmd
+++ b/wnv-s_weekly_report_pipeline.qmd
@@ -17,8 +17,7 @@ source("scripts/config.R")
 
 ```
 
-\
-Update trap locations?\
+Update trap locations?
 -will look to see if the trap_col names exist, remove them then merge with trap_coord and overwrite all_data_fn
 
 ```{r}
@@ -34,13 +33,27 @@ if(clean_data == "YES") {
 }
 ```
 
+
+
+data_input: vdci
+code below:
+formats weekly report data to match existing database
+```{r}
+source("scripts/data_input_read_clean.R")
+```
+
+data_input: platemap and quantstudio
+```{r}
+source("scripts/QS_platemap_read_clean.R")
+```
+
 Code Below:\
-- checks if only one file is present in data_input/new_data folder\
-- checks if it is a csv\
-- if both true reads in data if not prints and error
+ - merges weekly report with existing database
+ -pulls data from gdrive and makes and archived copy in database_archive
+ 
 
 ```{r}
-source("scripts/check_data.R")
+source("scripts/data_merge_and_push.R")
 ```
 
 Code Below:\
@@ -49,6 +62,11 @@ Code Below:\
 
 ```{r}
 source('scripts/abundance.R')
+```
+
+
+```{r}
+source('scripts/pools.R')
 ```
 
 Code Below:\
@@ -65,7 +83,14 @@ Notes: this script will drop weeks that only have a gravid trap. because gravid 
 
 ```{r}
 source("scripts/pIR_VI.R")
+```
 
+```{r}
+source("scripts/historical_weekly.R")
+```
+
+```{r}
+source("scripts/tables.R")
 ```
 
 ```{r}
