generate_report.R working. added ct_threshold check. commit before adding data_* folder clean.

--- a/wnv-s_weekly_report_pipeline.qmd
+++ b/wnv-s_weekly_report_pipeline.qmd
@@ -39,7 +39,7 @@ data_input: vdci
 code below:
 formats weekly report data to match existing database
 ```{r}
-source("scripts/data_input_read_clean.R")
+source("scripts/vdci_cdc_read_clean.R")
 ```
 
 data_input: platemap and quantstudio
@@ -58,6 +58,17 @@ source("scripts/data_merge_and_push.R")
 
 creates list to remove any traps that weren't found in the database in the current season or the previous. used in abundance.
 
+
+Code Below:\
+-data_input:\
+  - active_traps.gsheet\
+  - trap_malfunction.gsheet
+
+-data_output:\
+   - fn_func_trap: data_mid/functional_traps.csv
+```{r}
+source("scripts/get_func_trap.R")
+```
 
 Code Below:\
 - data input:\
@@ -97,15 +108,17 @@ source("scripts/tables.R")
 ```
 
 ```{r}
-source("scripts/weekly_input_report_format.R")
+suppressMessages(
+  source("scripts/generate_report.R")
+)
+
 ```
 
 
 ```{r}
-source("scripts/data_viz.R")
+#source("scripts/data_viz.R")
 ```
 
 ```{r}
-source("scripts/map_data.R")
-
+#source("scripts/map_data.R")
 ```
