--- a/wnv-s_weekly_report_pipeline.qmd
+++ b/wnv-s_weekly_report_pipeline.qmd
@@ -30,10 +30,7 @@ source("scripts/config.R")
 
 ```
 
-
-data_input:
-- reads in all datasheets types
-
+data_input: - reads in all datasheets types
 
 ```{r}
 source("scripts/datasheet_read_clean.R")
@@ -46,41 +43,80 @@ source("scripts/pcr_platemap_read_clean.R")
 ```
 
 Code Below:\
-- merges the cq_data (platemap and pcr results) with the datasheets
-- creates the test_code threshold
-- reads in database from google drive
-- creates a copy to archive on googledirve
-- merges weekly update with the database to make database_update
-- pushs database_update to googledrive
-- writes the weekly update to the mid folder
 
 ```{r}
 source("scripts/pcr_plot.R")
 pcr_plot
 ```
 
+Code Below:
+
+-   data_input:
+
+    -   active_traps.gsheet
+
+    -   trap_malfunction.gsheet
+
+```{=html}
+<!-- -->
+```
+-   data_output:
+
+    -   fn_func_trap: data_mid/functional_traps.csv
+
+-   description:
+
+    -   pull and create list of functional traps (ones that are active that didn't malfunction)
+
+    -   
+
+```{r}
+source("scripts/get_func_trap.R")
+```
+
+Code Below:
+
+-   data_input:
+
+    -   datasheets
+
+    -   pcr_sheet
+
+    -   platemap
+
+    -   fn_func_trap: data_mid/functional_traps.csv \*to be added
+
+```{=html}
+<!-- -->
+```
+-   data_output:
+
+    -   fn_database_output
+
+    -   unmatched traps
+
+-   description:
+
+    -   checks to ensure traps match existing list
+
+    -   pulls database
+
+    -   merges datasheet pcr and platemap data
+
+    -   makes archive copy of database
+
+    -   merges new data with database
+
+    -   pushes changes from new data to database to googledrive
+
 ```{r}
 source("scripts/data_merge_and_push.R")
 ```
 
-Code Below:
--data_input 
+Code Below: -data_input
+
 ```{r}
 source("scripts/weekly_data_input.R")
-```
-
-creates list to remove any traps that weren't found in the database in the current season or the previous. used in abundance.
-
-Code Below:\
--data_input:\
-- active_traps.gsheet\
-- trap_malfunction.gsheet
-
--data_output:\
-- fn_func_trap: data_mid/functional_traps.csv
-
-```{r}
-source("scripts/get_func_trap.R")
 ```
 
 Code Below:\
@@ -95,8 +131,7 @@ source('scripts/abundance_v2.R')
 source('scripts/pools.R')
 ```
 
-Code Below:\
-- calculates pooled Infection Rate and Vector Index
+Code Below:
 
 Data Input:\
 -output from abundance.R\
@@ -105,7 +140,12 @@ Data Input:\
 Data Output:\
 -yYYYY_wWW_data_update\
 \
-Notes: this script will drop weeks that only have a gravid trap. because gravid traps aren't used in abundance calculations
+Description:
+
+\- calculates pooled Infection Rate and Vector Index\
+-calculates all spp for each zone (TBD 24-07-16)
+
+this script will drop weeks that only have a gravid trap. because gravid traps aren't used in abundance calculations
 
 ```{r}
 source("scripts/pIR_VI.R")
