weekly commit before data removal

--- a/wnv-s_weekly_report_pipeline.qmd
+++ b/wnv-s_weekly_report_pipeline.qmd
@@ -18,8 +18,8 @@ source("scripts/config.R")
 ```
 
 ```{bash}
-# git commit -a -m "weekly commit before data removal"
-# git push
+git commit -a -m "weekly commit before data removal"
+git push
 
 ```
 
@@ -50,22 +50,12 @@ pcr_plot
 Code Below:
 
 -   data_input:
-
     -   active_traps.gsheet
-
     -   trap_malfunction.gsheet
-
-<!-- -->
-
 -   data_output:
-
     -   fn_func_trap: data_mid/functional_traps.csv
-
 -   description:
-
     -   pull and create list of functional traps (ones that are active that didn't malfunction)
-
-    -   
 
 ```{r}
 source("scripts/get_func_trap.R")
@@ -74,33 +64,19 @@ source("scripts/get_func_trap.R")
 Code Below:
 
 -   data_input:
-
     -   datasheets
-
     -   pcr_sheet
-
     -   platemap
-
     -   fn_func_trap: data_mid/functional_traps.csv \*to be added
-
 -   data_output:
-
     -   fn_database_output
-
     -   unmatched traps
-
 -   description:
-
     -   checks to ensure traps match existing list
-
     -   pulls database
-
     -   merges datasheet pcr and platemap data
-
     -   makes archive copy of database
-
     -   merges new data with database
-
     -   pushes changes from new data to database to googledrive
 
 ```{r}
@@ -115,7 +91,7 @@ source("scripts/weekly_data_input.R")
 
 Code Below:\
 - data input:\
-\-- data_input file and trap coordinates (if not in data_input)
+- data_input file and trap coordinates (if not in data_input)
 
 ```{r}
 source('scripts/abundance_v2.R')
