commit for 2024 surveillance pipeline architecture

--- a/wnv-s_weekly_report_pipeline.qmd
+++ b/wnv-s_weekly_report_pipeline.qmd
@@ -6,7 +6,7 @@ editor: visual
 
 # Weekly Data Report
 
-### \>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\> 0 ---------------------------------- CONFIGURATION -------------------------------------------------- \>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>
+###  0 ---------------------------------- CONFIGURATION -------------------------------------------------- 
 
 \- clears environment\
 - unloads packages\
@@ -42,7 +42,7 @@ if(tolower(clean_dir) == "y") {
  NULL } #end if no to clean
 ```
 
-### \>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\> 0 ------------------------------\-\--DATA GDRIVE LOAD ----------------------------------------------- \>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>
+###  0 ---------------------------------DATA GDRIVE LOAD ----------------------------------------------- 
 
 ```{r}
 source("0_R/0_check_load_input_data.R")
@@ -54,7 +54,7 @@ README: DATA GDRIVE LOAD
 
 ```
 
-### \>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\> 1 ------------------------------\-\--DATASHEET CLEAN ----------------------------------------------- \>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>
+###  1 ---------------------------------DATASHEET CLEAN ----------------------------------------------- 
 
 ```{r, datasheet_clean}
 source("0_R/1_datasheet_read_clean.R")
@@ -98,7 +98,7 @@ DATASHEET CLEAN: README
 # [ mid_directory ] / [fn_weekly_input_format_mid ]
 ```
 
-### \>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\> 2 -------------------------------PCR & PLATEMAP CLEAN ----------------------------------------- \>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>
+###  2 -------------------------------PCR & PLATEMAP CLEAN ----------------------------------------- 
 
 ```{r}
 source("0_R/2_pcr_platemap_read_clean.R")
@@ -109,7 +109,7 @@ source("0_R/2_pcr_platemap_read_clean.R")
 -\
 data_input: platemap and quantstudio
 
-### \>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\> 1 ----------------------------------------------------PCR PLOT -------------------------------------------- \>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>\>
+###  1 ----------------------------------------------------PCR PLOT -------------------------------------------- 
 
 ```{r pcr plot}
 source("0_R/pcr_plot.R")
