updated config_weekly.R with foco_trap keys

--- a/wnv-s_weekly_report_pipeline.qmd
+++ b/wnv-s_weekly_report_pipeline.qmd
@@ -19,8 +19,7 @@ editor: visual
 NONE
 
 ```{bash}
-Rscript 0_R/config_weekly.R --year 2024 --week 37 # first arg is year second is week
-
+Rscript 0_R/config_weekly.R --year 2024 --week 37 --threshold 500 # first arg is year second is week
 ```
 
 ```{bash}
